Alignment fixes

--- a/Reesen/src/app/components/about/about.component.css
+++ b/Reesen/src/app/components/about/about.component.css
@@ -1,3 +1,6 @@
+.about{
+  margin-top: 20px;
+}
 .play-store{
     background-color: #4B7869;
     padding: 6px;
