--- a/Reesen/src/app/components/login/login.component.css
+++ b/Reesen/src/app/components/login/login.component.css
@@ -69,9 +69,9 @@ input::-webkit-input-placeholder{
     width: 100%;
 }
 
-@media only screen and (max-width: 840px) {
+@media only screen and (max-width: 800px) {
     .logo-image{
-        width: 50vw; 
+        width: 40vw; 
     }
 
 }
