--- a/Reesen/src/styles.css
+++ b/Reesen/src/styles.css
@@ -1,3 +1,8 @@
+body, html{
+    margin: 0;
+    padding: 0;
+}
+
 .reesen-green-background{
     background-color: #578979;
 }
@@ -10,7 +15,7 @@
 }
 
 .reesen-big-lead-text{
-    font-size: 28px;
+    font-size: 38px;
     font-weight: bold;
 }
 
